{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player",
            "id": "d1af70a7-903c-480d-8ccd-4af0826cdc83",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "852dd28d-363e-4ec9-ad26-b46a79117e66",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "90058a9a-4dfe-45bd-9896-568f163bc3d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "xDirection",
                    "id": "11b10cd9-788c-4753-a857-2c360af4b2a4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0dd46040-02fe-428f-8c1c-c7444db45c38",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "db9f354c-76bc-409e-824a-6efcf4d00e43",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "400b190b-02ef-40d3-88bb-67549d01a9b4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}